--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.15",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "@react-google-maps/api": "^2.17.0",
     "axios": "^1.2.0",
     "react": "^18.2.0",
